new cm different day

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 REACT_APP_CANDY_MACHINE_ID=AVohvPq9JkaT7UyQYgMjKVLrk8JCmpS2Zy6PTCreXJbW
 
 REACT_APP_SOLANA_NETWORK=mainnet-beta
-REACT_APP_SOLANA_RPC_HOST=https://ssc-dao.genesysgo.net/
+REACT_APP_SOLANA_RPC_HOST=https://solitary-solitary-wildflower.solana-mainnet.quiknode.pro/14ea69d0dd2462c10a4976d843c9d3b3b4bc92ac/
